@@ -1,0 +1,2 @@
+# Remove this file on next rails release
+require "generators/devise/devise/devise_generator"
