@@ -1,0 +1,2 @@
+# Remove this file after deprecation
+warn "[WARNING] `rails g devise_views` is deprecated, please use `rails g devise:views` instead."
